--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html>
 	<head>
-		<title>cherupil.com</title>
+		<title>Pepyaka</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="dist/css/normalize.css">
 		<link rel="stylesheet" href="dist/css/app.css">
 	</head>
 	<body>
+		<div id="container"></div>
 		<script src="dist/js/app.js"></script>
-		<div class="nav">
-			<a href="#"></a>
-			<a href="#"></a>
-		</div>
 	</body>
 </html>
