--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Distort</title>
+		<title>Three Test</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="dist/css/normalize.css">
 		<link rel="stylesheet" href="dist/css/app.css">
 	</head>
 	<body>
 		<div id="container"></div>
+		<div class="overlay"></div>
+		<main>
+			<h1>Hello</h1>
+		</main>
 		<script src="dist/js/app.js"></script>
 	</body>
 </html>
