--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<main>
 			<h1>Hello</h1>
 		</main>
+		<canvas class="cursor-canvas"></canvas>
 		<script src="dist/js/app.js"></script>
 	</body>
 </html>
