Adds cursor hover and logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 	<body>
 		<div id="container"></div>
 		<div class="overlay"></div>
+		<header>
+			<a href="/">
+				<img src="/dist/images/cc-logo-2020.svg" alt="Chris Cherupil">
+			</a>
+		</header>
 		<main>
 			<h1>Hello</h1>
 		</main>
