fixed logo tangencies

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="overlay"></div>
 		<header>
 			<a href="/">
-				<img src="/dist/images/cc-logo-2020.svg" alt="Chris Cherupil">
+				<img src="/dist/images/cc-logo-2020.png" alt="Chris Cherupil">
 			</a>
 		</header>
 		<main>
